--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,252 @@
+@font-face {
+    font-family: 'nunitoextralight';
+    src: url('fonts/nunito-variablefont_wght-webfont.woff2') format('woff2'),
+         url('fonts/nunito-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'nunitoextralight_italic';
+    src: url('fonts/nunito-italic-variablefont_wght-webfont.woff2') format('woff2'),
+         url('fonts/nunito-italic-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "nunitoextralight", Arial, sans-serif;
+}
+
+.logo-wrap, .header-right, nav, .heading, .main-content, footer {
+    padding: 20px;
+}
+
+body {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    background-color: white;
+    font-size: 22px;
+    color: black;
+}
+
+    .logo-wrap {
+        grid-column: 1 / 2;
+        background-color: gray;
+    }
+    .logo-wrap h1 {
+        color: rgba(255, 255, 255, 0.5);
+    }
+
+    .header-right {
+        grid-column: 2 / 3;
+        display: flex;
+        align-items: center;
+        background-color: gainsboro;
+
+    }
+
+    .search {
+        flex: 1;
+        display: flex;
+      }
+
+     .search label {
+        display: none;
+        flex: 0;
+      }
+
+     .search input {
+        font-size: 22px;
+        padding: 2px 5px;
+        border-radius: 10px;
+        background-color: transparent;
+        border: 1px solid gray;
+        flex: 1;
+     }
+
+     .search button {
+        flex: 0;
+     }
+
+     .user-profile {
+        display: flex;
+        
+     }
+
+     .user-profile li {
+        list-style-type: none;
+        padding: 0 0 0 20px;
+     }
+     .user-profile a {
+        color: gray;
+        text-decoration: none;
+     }
+     .user-profile a:hover {
+        color: black;
+     }
+
+
+
+nav {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+    background-color: gray;
+}
+
+    .dash-nav {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+
+    .dash-nav li {
+        list-style-type: none;
+        
+    }
+
+    li.nav-space {
+        margin-top: 72px;
+    }
+
+    .dash-nav a {
+        text-decoration: none;
+        font-weight: bolder;
+        color: rgba(255, 255, 255, 0.6);
+    }
+    .dash-nav a:hover {
+        color: white;
+    }
+
+    .heading {
+        display: flex;
+        gap: 30px;
+        align-items: center;
+        padding-top: 0px;
+        background-color: gainsboro;
+        border-bottom: 3px solid rgba(0, 0, 0, 0.25);
+    }
+    .greeting {
+        flex: 1;
+    }
+    .greeting p {
+        font-size: 15px;
+    }
+    .greeting p.user-name {
+        font-size: 20px;
+        font-weight: bolder;
+    }
+    .user-actions {
+        flex: 0;
+    }
+    .user-actions ul {
+        display: flex;
+    }
+    .user-actions ul li {
+        padding: 0 0 0 15px;
+        list-style-type: none;
+    }
+    .user-actions a {
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: bolder;
+        background-color: gray;
+        color: rgba(255, 255, 255, 0.6);
+        padding: 6px 14px;
+        border-radius: 15px;
+        border-bottom: 3px solid rgba(0, 0, 0, 0.25);
+
+    }
+    .user-actions a:hover {
+        color: white;
+    }
+
+
+    .main-content {
+        background-color: silver;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 20px;
+    }
+
+        .project-wrap {
+            grid-column: 1 / 2;
+            grid-row: 1 / 3;
+            display: grid;
+            grid-template-rows: 40px 1fr;
+            gap: 20px;
+        }
+        .project-wrap h2 {
+            grid-row: 1 / 2;
+            font-size: 30px;
+            line-height: 40px;
+        }
+        .project-wrap .cards {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .cards .card {
+            min-height: 200px;
+            background-color: rgba(255, 255, 255, 0.7);
+            border-bottom: 3px solid rgba(0, 0, 0, 0.25);
+            border-radius: 15px;
+            padding: 15px 20px;
+            font-size: 19px;
+        }
+        .project-actions {
+            display: flex;
+            justify-content: end;
+            gap: 15px;
+        }
+        .project-actions li {
+            list-style-type: none;
+        }
+        .project-actions a {
+            text-decoration: none;
+        }
+        .feed-wrap {
+            grid-column: 2 / 3;
+            display: grid;
+            gap: 40px;
+        }
+        .announcements, .trending {
+            display: grid;
+            grid-template-rows: 40px 1fr;
+            gap: 20px;
+        }
+        .announcements h3, .trending h3 {
+            line-height: 40px;
+            font-size: 25px;
+            margin-top: 3px;
+        }
+        .announcements .card, .trending .card {
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 15px;
+            padding: 20px;
+        }
+        .announcements article, .trending article {
+            font-size: 16px;
+            padding-bottom: 20px;
+            margin: 0 0 20px 0;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+        }
+        .announcements article:last-child, .trending article:last-child {
+            font-size: 16px;
+            padding-bottom: 0px;
+            margin: 0 0 0px 0;
+            border-bottom: none;
+        }
+
+footer {
+    grid-column: 2 / 3;
+    text-align: center;
+    background-color: gainsboro;
 }
